--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = liblangtag
 url = https://bitbucket.org/tagoh/liblangtag/downloads/liblangtag-0.6.3.tar.bz2
 archives = 
-giturl = 
+giturl = https://bitbucket.org/tagoh/liblangtag.git
 domain = 
 
 [autospec]
