--- a/options.conf
+++ b/options.conf
@@ -1,19 +1,20 @@
 [package]
 name = liblangtag
-url = https://bitbucket.org/tagoh/liblangtag/downloads/liblangtag-0.6.3.tar.bz2
+url = https://bitbucket.org/tagoh/liblangtag/downloads/liblangtag-0.6.4.tar.bz2
 archives = 
 giturl = https://bitbucket.org/tagoh/liblangtag.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
 32bit = false
 # allow package to build with test failures
-allow_test_failures = false
+allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -38,12 +39,16 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
